--- a/proj1/index.html
+++ b/proj1/index.html
@@ -166,13 +166,16 @@
       <div class="row-container">
         <div class="column">
           <img src="./img/screenshot_2-17_23-3-54.png" alt="zlnpn" class="img2"/>
-          <p>nearest, p_nearest</p>
+          <p>l_nearest, p_nearest</p>
         </div>
         <div class="column">
-          <img src="./img/screenshot_2-17_23-3-54.png" alt="zlnpl" class="img2"/>
+          <img src="./img/screenshot_2-17_23-3-8.png" alt="zlnpl" class="img2"/>
           <p>l_nearest, p_linear</p>
         </div>
     </div>
+    <p>
+      link to website: https://cal-cs184-student.github.io/project-webpages-sp23-sofiahowardjimenez/proj1/index.html
+    </p>
     </div>
   </body>
 </html>
